kubeflow/apps/centraldashboard/upstream/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /centraldashboard
  name: centraldashboard
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|default|centraldashboard'
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: centraldashboard.$(CD_NAMESPACE).svc.$(CD_CLUSTER_DOMAIN)
        port:
          number: 80
