kubeflow/apps/centraldashboard/upstream/overlays/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: /central-dashboard
  name: central-dashboard
  annotations:
    internal.kpt.dev/upstream-identifier: 'security.istio.io|AuthorizationPolicy|default|central-dashboard'
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: centraldashboard
